# Bazel-Shared-Library

./: .gitignore  README.md  WORKSPACE.bazel  dynamic_lib.bzl
Lib/: BUILD.bazel  Library.cpp  Library.hpp
Lib/src/: Other.cpp  Other.hpp
Runtime/: BUILD.bazel  Runtime.cpp
