load("//:dynamic_lib.bzl", "dynamic_library")

filegroup(
    name = "src",
    srcs = glob(["**"]),
    visibility = ["//visibility:__pkg__"],
)

dynamic_library(
    name = "hello",
    srcs = ["Library.cpp", "src/Other.cpp"],
    hdrs = ["Library.hpp", "src/Other.hpp"],
    defines = ["BUILD_DLL"],
    strip_include_prefix = "/Lib",
    visibility = ["//visibility:public"],
)